# k0

./: .gitignore  .gitmodules  Jenkinsfile  LICENSE  README.md  docker-compose.yml  hashtest.py
.circleci/: config.yml
ci/: publish-js.Jenkinsfile
cpp/: CMakeLists.txt  Dockerfile  README.md
cpp/docker/: builder.Dockerfile  convert-vk.Dockerfile  k0.Dockerfile  mtserver.Dockerfile  pack.Dockerfile  pack_256.Dockerfile  server.Dockerfile  setup.Dockerfile  unpack.Dockerfile  zktrading.Dockerfile
cpp/src/: CMakeLists.txt  MerkleTree.cpp  MerkleTree.hpp  MerkleTree.tcc  circuit_test.cpp  convert_vk.cpp  data.hpp  definitions.hpp  dummy.cpp  file_output.hpp  hash.cpp  hash.hpp  iotest.cpp  json_conversion.cpp  json_conversion.hpp  jsonrpc_spec.json  pack_256_bits.cpp  packing.hpp  packing.tcc  pkutil.cpp  playground.cpp  prfs.cpp  prfs.h  printbits.hpp  serialization.cpp  serialization.hpp  setup.cpp  unpack_256_bits.cpp  util.cpp  util.h  util.hpp  verify.cpp
cpp/src/circuitry/: AdditionCircuit.hpp  AdditionCircuit.tcc  CommitmentCircuit.hpp  CommitmentCircuit.tcc  DepositCircuit.hpp  DepositCircuit.tcc  ExampleCircuit.hpp  ExampleCircuit.tcc  InclusionCircuit.hpp  MTAdditionCircuit.hpp  MTAdditionCircuit.tcc  NewTransferCircuit.hpp  NewTransferCircuit.tcc  NoteAdditionCircuit.hpp  NoteInclusionCircuit.hpp  OuterNoteCommitmentCircuit.hpp  OuterNoteCommitmentCircuit.tcc  TransferCircuit.hpp  TransferCircuit.tcc  WithdrawalCircuit.h  WithdrawalCircuit.hpp  WithdrawalCircuit.tcc
cpp/src/circuitry/gadgets/: ExampleGadget.hpp  ExampleGadget.tcc  MTLeafAddition.hpp  MTLeafAddition.tcc  MTLeafAdditionPacked.hpp  SumEqualityGadget.hpp  cm.h  comms.hpp  dummyhash_gadget.hpp  dummyhash_gadget.tcc  input_note_gadget.hpp  input_note_gadget.tcc  prfs.h  prfs.hpp  sha256_512_bits.hpp  sha256_512_bits.tcc  sha256_compression.h  sha256_compression.tcc
cpp/src/circuits/gadgets/: prfs.hpp
cpp/src/compat/: endian.h
cpp/src/crypto/: common.h
cpp/src/examples/merkle_tree/: AdditionCircuit.hpp  AdditionCircuit.tcc  CMakeLists.txt  InclusionCircuit.hpp  InclusionCircuit.tcc  MTLeafAddition.hpp  MTLeafAddition.tcc  MTLeafAdditionPacked.tcc  MerkleTreeServer.hpp  MerkleTreeServer.tcc  addition_circuit_test.cpp  addition_packed_test.cpp  addition_setup.cpp  addition_test.cpp  addition_verify.cpp  inclusion_setup.cpp  inclusion_test.cpp  jsonrpc_spec.json  merkletreestubclient.h  merkletreestubserver.h  nursery.cpp  server.cpp
cpp/src/hash/: libsnark_hash.hpp  sha256.cpp  sha256.hpp  sha256_compression.cpp  sha256_compression.h  sha256_compression.hpp
cpp/src/mtserver/: MTServer.hpp  MTServer.tcc  mtserver.jsonrpc.spec.json  mtstubserver.h  run_mtserver.cpp
cpp/src/scheme/: cm.cpp  cm.h  comms.cpp  comms.hpp  comms.tcc  ka.cpp  ka.hpp  kdf.cpp  kdf.hpp  note_encryption.cpp  note_encryption.hpp  prfs.cpp  prfs.h  prfs.tcc
cpp/src/server/: CMakeLists.txt  MerkleTreeServer.hpp  MerkleTreeServer.tcc  Server.hpp  Server.tcc  encrypt_note.tcc  inclusion_test.cpp  jsonrpc_spec.json  k0stubserver.h  merkletreestubserver.h  proof_serialization.cpp  proof_serialization.hpp  run_server.cpp  server.cpp  server.jsonrpc.spec.json  zktradestubserver.h
cpp/src/server/mt/: MTServer.tcc  mt.jsonrpc.spec.json  run_mtserver.cpp
cpp/src/server/prover/: Server.hpp  run_server.cpp  zktradestubserver.h
cpp/src/setup/: CMakeLists.txt  addition_setup.cpp  inclusion_setup.cpp  run_setup.cpp  setup.cpp
cpp/test/: CMakeLists.txt  bits_and_numbers.cpp  comms.cpp  dummy.cpp  encryption.cpp  hashes.cpp  json.cpp  ka.cpp  lifecycle.cpp  main.cpp  merkle_tree.cpp  merkle_tree_addition.cpp  note_commitment.cpp  prfs.cpp  sha256_compression.cpp  summation.cpp  transfer.cpp  util.cpp  withdrawal_circuit.cpp
cpp/test/aux/: sha256.py  sha256_compress.py
go/data/: data.go
go/jsonrpc/: call.go
go/serverclient/: depositcommitmentproof.go  packing.go  packing_test.go  prfaddr.go  prfaddr_test.go  verify.go  verify_test.go
go/util/: big.go  big_test.go  bytes.go  hex.go  hex_test.go  map.go  random.go
js/: .gitignore  available-notes.js  compile.js  deploy.js  docker-compose.yml  generate-and-deploy-contract.js  generate-verifier-contract.js  init.js  k0.js  logger.js  package.json  proof-conversion.js  proof-from-file.js  run.js  send-transaction.js  util.js  vk-from-file.js  vk-to-sol.js
js/actions/: decrypt-note.js  deposit.js  generate-payment-data.js  prepare-deposit.js  prepare-transfer.js  prepare-withdrawal.js
js/client/: add.js  cm.js  decrypt-note.js  deposit-commitment-proof.js  derive-keys.js  encrypt-note.js  index.js  merkle-tree-addition-proof.js  prepare-transfer.js  prepare_deposit.js  prepare_transfer.js  prepare_withdrawal.js  prf-addr.js  prf_addr.js  proof-conversion.js  ready.js  request.js  reset.js  root.js  verify-proof.js
js/demo/: .#init.js  alice.js  bob-deposit.js  bob.js  cleanSecrets.sh  deploy-contract.js  deploy-trading-contract.js  deposit.js  generate-payment-data.js  init-event-handlers.js  init-fabric.js  init.js  inquire-input-note.js  inquire-output-note.js  mt-server-ports.json  print-state.js  public-keys.json  run.js  server-ports.json  test.js  transfer-money.js  util.js  wallet.js
js/eth/: flatten-proof.js  index.js  init-event-handlers.js  send-transaction.js  sign-transaction.js  util.js
js/fabric/: client.js  get-config.js  index.js  init-event-handlers.js  peers.csv  send-transaction.js
js/platform-state/: cm-at-index.js  current-state.js  index-of-cm.js  index.js  linked-list.js  state-list.js
js/secret-store/: add-note-info.js  add-sn-to-note.js  conversion.js  get-a-pk.js  get-a-sk.js  get-address.js  get-available-notes.js  get-note-info.js  get-pk-enc.js  get-private-key.js  get-public-key.js  get-sk-enc.js  index.js  serialize.js  slurp.js  spit.js
js/state/: index.js  linked-list.js  state-list.js
js/test/: README.md  address.js  merkle_tree.js  mixer.js  (+5 more)
sol/: AddressConversionCheck.sol  Callee.sol  CarToken.sol  CarTrade.sol  GenericVerifier.sol  HiddenPriceCarTrade.sol  MVPPT.sol  MerkleTree.sol  Mixer.sol  MoneyShower.sol  Pairing.sol
(+113 files in other folders)
